--- a/other-resources.html
+++ b/other-resources.html
@@ -66,7 +66,6 @@
         </div>
       </div>
     </nav>
-
     <section class="probootstrap-section probootstrap-section-colored">
       <div class="container">
         <div class="row">
@@ -76,7 +75,7 @@
         </div>
       </div>
     </section>
-
+    
 
     <section class="probootstrap-section probootstrap-section-sm">
       <div class="container">
@@ -117,7 +116,7 @@
                   <p>Call 800-984-3663</p>
                   <p>1691 The Alameda, San Jose, CA 95126
                   <br>One block off campus!</p>
-                </h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a></h2>
+                <h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a></h2>
                   <p>Find recipes for healthy and filling meals</p>
                 <h2>2-1-1</h2>
                   <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
@@ -181,7 +180,7 @@
 
 
 
-      <div class="probootstrap-copyright">
+        <div class="probootstrap-copyright">
         <div class="container">
           <div class="row">
             <div class="col-md-8 text-left">
